--- a/singolo2.css
+++ b/singolo2.css
@@ -4,7 +4,7 @@
     padding:0;
 }
 .portfolio{
-    height: 870px;
+    height: 863px;
     width: 1020px;
     background-color: #2d303a;
 }
@@ -39,24 +39,96 @@
     border: 1px solid #666d89;
     padding-right: 6px;
     padding-left: 6px;
-
-    
  }
  a{
     text-decoration: none;
     color: #767e9e;
  }
+  a:hover {
+    color: #dedede;
+ 
+   }
 .portfolio .image {  
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
+    grid-gap: 17px;
     padding-left: 40px; 
     padding-right: 40px; 
-    padding-top: 20px;
+    padding-top: 18px;
   }
   .color3{
+    display: flex;
     width: 1020px;
     height: 6px;
     background-color: #323746;
   }
+  .about_us{
+    width: 1020px;
+    height: 728px;
+    background-color: #f2f2f2;
+    
+  }
+  .about_us h2{
+    padding-top: 68px;
+    padding-left: 40px; 
+    font-size: 30px;
+    line-height: 18px;
+    color: #666d89;
+  }
+ .about_us #p_us {
+    font-size: 18px;
+    line-height: 30px;
+    color: #767e9e;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 28px; 
+}
+.people{
+    display: flex;
+    flex-direction: row;
+    padding-left: 40px;
+
+}
+.person{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    padding-right: 19px;
+}
+
+.person .person_img {
+    padding-top: 46px; 
+}
+.person h4{
+    font-size: 18px;
+    line-height: 18px;
+    color: #666d89;
+    padding-top: 15px;
+    
+}
+.person p{  
+    font-size: 12px;
+    line-height: 22px;
+    color: #767e9e;
+    padding-top: 10px;
+}
+.person .media {
+    display: flex;
+    list-style-type: none;
+    width: 152px;
+    padding-top: 23px;
+   
+}
+
+.person .media li img{
+    width:32px;
+    height: 32px;
+    padding-right: 8px;
+}
+.color4{
+    display: flex;
+    width: 1020px;
+    height: 6px;
+    background-color: #ffffff;
+}
