--- a/singolo3.css
+++ b/singolo3.css
@@ -1,7 +1,6 @@
 *{
     font-family: "Lato";
-    padding: 0;
-    margin: 0;
+    margin: 0px auto; 
 }
 .main{
     height: 648px;
@@ -18,6 +17,7 @@
     font-size: 30px;
     line-height: 18px;
     color: #f0d8d9;
+    margin-left: 0px;
  }
  .get_a_quote p{
     width: 940px;
@@ -80,7 +80,7 @@
     background-color: rgb(38, 97, 102);
     font-size: 16px;
     line-height: 22px;
-    padding-left: 0px !important;
+    margin-left: 0px !important;
     cursor: pointer;
     
  }
@@ -101,6 +101,7 @@
     line-height: 18px;
     color: #f0d8d9;
     font-weight: 900;
+    margin-left: 0px;
  }
  .contact_inf p{
      width: 303px;
@@ -112,19 +113,22 @@
      
  }
  .third .contact_inf ul{
-    display: flex;
+    
     list-style-type: none;
     flex-direction: column;
     margin-top: 17px;
     font-size: 12px;
     line-height: 22px;
     color: #f0d8d9;
+    margin-left:0px;
+    padding-left:0px;
+    
  }
  .contact_inf ul li img{
     text-align: center;
     padding-right: 10px;
+  
  }
- 
 
  .color2{
     width: 1020px;
@@ -151,7 +155,7 @@
     display: flex;
     list-style-type: none;
     width: 152px;
-    margin-left: 686px;
+    margin-right: 40px;
     margin-top: 23px;
  }
  .third footer ul li img{
